--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "nodemon": "^1.11.0"
   },
   "devDependencies": {},
+  "engines":{
+    "node": "8.1.x",
+    "npm": "5.0.x"
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
