--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "devDependencies": {},
   "engines":{
-    "node": "8.1.x",
-    "npm": "5.0.x"
+    "node": "8.1.2",
+    "npm": "5.0.3"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node index",
     "dev": "nodemon index.js"
   },
   "repository": {
