--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.15.3",
-    "nodemon": "^1.11.0"
+    "mocha": "^3.4.2",
+    "nodemon": "^1.11.0",
+    "save-dev": "^2.0.0",
+    "should": "^11.2.1",
+    "supertest": "^3.0.0"
   },
   "devDependencies": {},
-  "engines":{
+  "engines": {
     "node": "8.1.2",
     "npm": "5.0.3"
   },
