--- a/package.json
+++ b/package.json
@@ -7,18 +7,27 @@
     "express": "^4.15.3",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "save-dev": "^2.0.0",
     "should": "^11.2.1",
     "supertest": "^3.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^2.2.1"
+  },
   "engines": {
     "node": "8.1.2",
     "npm": "5.0.3"
   },
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index.js"
+    "start": "node server",
+    "webpack": "webpack",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
